addons/kustomize/oss/kyverno/base/deny-empty-ingress/.kyverno-test/resources.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: good
  namespace: default
spec:
  rules:
    - host: good-ingress.com
      http:
        paths:
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bad
  namespace: default
spec:
  rules: []
