addons/kustomize/oss/kyverno/base/deny-empty-ingress/.kyverno-test/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: deny-empty-ingress-host
policies:
  - ../policy.yaml
resources:
  - resources.yaml
results:
  - kind: Ingress
    policy: deny-empty-ingress-host
    resources:
      - bad
    result: fail
    rule: deny-empty-ingress-host
  - kind: Ingress
    policy: deny-empty-ingress-host
    resources:
      - good
    result: pass
    rule: deny-empty-ingress-host
